fix some admin ui stuff and api docs
